--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "debug": "^2.6.0",
+    "dotenv": "^6.1.0",
     "ejs": "^2.5.5",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.2.0",
