--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-ejs-layouts": "^2.2.0",
     "mongoose": "^5.3.9",
     "morgan": "^1.9.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
